--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="description" content="Proyecto: Creación de un examen con autocorrección">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="css/desktop.css">
+        <link rel="stylesheet" type="text/css" href="css/portadaDesktop.css">
         <!--script src="js/js.js"></script-->
     </head>
     <body>
@@ -20,7 +20,7 @@
         </nav>
         <h1 id="titulo">UNIVERSIDAD<br>NOSTRADAMUS</h1>
         <div id="containerBtn">
-            <a href="#">
+            <a href="cuestionario.html">
                 <img src="img/boton.png" alt="examen">
             </a>
         </div>
