--- a/cuestionario.html
+++ b/cuestionario.html
@@ -5,15 +5,24 @@
         <meta name="description" content="Proyecto: Creación de un examen con autocorrección">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="css/cuestionario.css">
+        <link rel="stylesheet" type="text/css" href="css/cuestionarioDesktop.css">
         <!--script src="js/js.js"></script-->
     </head>
     <body>
-        <div id="logo">
-            <img src="img/logo.png" alt="logo">
-        </div>
-        <h1 id="titulo">UNIVERSIDAD<br>NOSTRADAMUS</h1>
-        <form action="action">
+        <header>
+            <div id="logo">
+                <img src="img/logo.png" alt="logo">
+            </div>
+            <h1 id="titulo">UNIVERSIDAD<br>NOSTRADAMUS</h1>
+        </header>
+         <nav id="menu">
+            <a><span id="inicio">INICIO</span></a>
+            <a><span id="info">INFORMACIÓN</span></a>
+            <a><span id="ubicacion">UBICACIÓN</span></a>
+            <a><span id="about">ABOUT</span></a>
+        </nav>
+        <!--<div id="fondo"></div>-->
+        <form id="formulario" action="action">
             <h4>1. Pregunta 1</h4>
             <select>
                 <option selected value="-1" disabled>Selecciona una...</option>
@@ -79,12 +88,12 @@
             </div>
             <h4>10. Pregunta 10</h4>
             <div>
-            <input type="checkbox" id="r" value="red">
-            <label for="r">Red</label><br/>
-            <input type="checkbox" id="g" value="green">
-            <label for="g">Green</label><br/>
-            <input type="checkbox" id="b" value="blue">
-            <label for="b">Blue</label><br/>
+                <input type="checkbox" id="r" value="red">
+                <label for="r">Red</label><br/>
+                <input type="checkbox" id="g" value="green">
+                <label for="g">Green</label><br/>
+                <input type="checkbox" id="b" value="blue">
+                <label for="b">Blue</label><br/>
             </div>
         </form>
     </body>
