--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <!--script src="js/js.js"></script-->
     </head>
     <body>
-        <div id="logo">
+        <header id="logo">
             <img src="img/logo.png" alt="logo">
-        </div>
+        </header>
         <nav id="menu">
             <a><span id="inicio">INICIO</span></a>
             <a><span id="info">INFORMACIÓN</span></a>
