--- a/cuestionario.html
+++ b/cuestionario.html
@@ -15,87 +15,89 @@
             </div>
             <h1 id="titulo">UNIVERSIDAD<br>NOSTRADAMUS</h1>
         </header>
-         <nav id="menu">
+        <nav id="menu">
             <a><span id="inicio">INICIO</span></a>
             <a><span id="info">INFORMACIÓN</span></a>
             <a><span id="ubicacion">UBICACIÓN</span></a>
             <a><span id="about">ABOUT</span></a>
         </nav>
-        <!--<div id="fondo"></div>-->
-        <form id="formulario" action="action">
-            <h4>1. Pregunta 1</h4>
-            <select>
-                <option selected value="-1" disabled>Selecciona una...</option>
-                <option value="a">a</option>
-                <option value="b">b</option>
-                <option value="c">c</option>
-                <option value="d">d</option>
-            </select>
-            <h4>2. Pregunta 2</h4>
-            <select>
-                <option selected value="-1" disabled>Selecciona una...</option>
-                <option value="a">a</option>
-                <option value="b">b</option>
-                <option value="c">c</option>
-                <option value="d">d</option>
-            </select>
-            <h4>3. Pregunta 3</h4>
-            <select multiple>
-                <option selected value="-1" disabled>Selecciona una o mas...</option>
-                <option value="a">a</option>
-                <option value="b">b</option>
-                <option value="c">c</option>
-                <option value="d">d</option>
-            </select>
-            <h4>4. Pregunta 4</h4>
-            <select multiple>
-                <option selected value="-1" disabled>Selecciona una o mas...</option>
-                <option value="a">a</option>
-                <option value="b">b</option>
-                <option value="c">c</option>
-                <option value="d">d</option>
-            </select>
-            <h4>5. Pregunta 5</h4>
-            <input type="text">
-            <h4>6. Pregunta 6</h4>
-            <input type="text">
-            <h4>7. Pregunta 7</h4>
-            <div>
-                <input id="red" type="radio" name="color" value="red">
-                <label for="red">Red</label><br/>
-                <input id="green" type="radio" name="color" value="green">
-                <label for="green">Green</label><br/> 
-                <input id="blue" type="radio" name="color" value="blue">
-                <label for="blue">Blue</label><br/>
-            </div>
-            <h4>8. Pregunta 8</h4>
-            <div>
-                <input id="red" type="radio" name="color" value="red">
-                <label for="red">Red</label><br/>
-                <input id="green" type="radio" name="color" value="green">
-                <label for="green">Green</label><br/> 
-                <input id="blue" type="radio" name="color" value="blue">
-                <label for="blue">Blue</label><br/>
-            </div>
-            <h4>9. Pregunta 9</h4>
-            <div>
-                <input type="checkbox" id="r" value="red">
-                <label for="r">Red</label><br/>
-                <input type="checkbox" id="g" value="green">
-                <label for="g">Green</label><br/>
-                <input type="checkbox" id="b" value="blue">
-                <label for="b">Blue</label><br/>
-            </div>
-            <h4>10. Pregunta 10</h4>
-            <div>
-                <input type="checkbox" id="r" value="red">
-                <label for="r">Red</label><br/>
-                <input type="checkbox" id="g" value="green">
-                <label for="g">Green</label><br/>
-                <input type="checkbox" id="b" value="blue">
-                <label for="b">Blue</label><br/>
-            </div>
-        </form>
+        <div id="containerForm">
+            <div id="fondoForm"></div>
+            <form id="formulario" action="action">
+                <h4>1. Pregunta 1</h4>
+                <select>
+                    <option selected value="-1" disabled>Selecciona una...</option>
+                    <option value="a">a</option>
+                    <option value="b">b</option>
+                    <option value="c">c</option>
+                    <option value="d">d</option>
+                </select>
+                <h4>2. Pregunta 2</h4>
+                <select>
+                    <option selected value="-1" disabled>Selecciona una...</option>
+                    <option value="a">a</option>
+                    <option value="b">b</option>
+                    <option value="c">c</option>
+                    <option value="d">d</option>
+                </select>
+                <h4>3. Pregunta 3</h4>
+                <select multiple>
+                    <option selected value="-1" disabled>Selecciona una o mas...</option>
+                    <option value="a">a</option>
+                    <option value="b">b</option>
+                    <option value="c">c</option>
+                    <option value="d">d</option>
+                </select>
+                <h4>4. Pregunta 4</h4>
+                <select multiple>
+                    <option selected value="-1" disabled>Selecciona una o mas...</option>
+                    <option value="a">a</option>
+                    <option value="b">b</option>
+                    <option value="c">c</option>
+                    <option value="d">d</option>
+                </select>
+                <h4>5. Pregunta 5</h4>
+                <input type="text">
+                <h4>6. Pregunta 6</h4>
+                <input type="text">
+                <h4>7. Pregunta 7</h4>
+                <div>
+                    <input id="red" type="radio" name="color" value="red">
+                    <label for="red">Red</label><br/>
+                    <input id="green" type="radio" name="color" value="green">
+                    <label for="green">Green</label><br/> 
+                    <input id="blue" type="radio" name="color" value="blue">
+                    <label for="blue">Blue</label><br/>
+                </div>
+                <h4>8. Pregunta 8</h4>
+                <div>
+                    <input id="red" type="radio" name="color" value="red">
+                    <label for="red">Red</label><br/>
+                    <input id="green" type="radio" name="color" value="green">
+                    <label for="green">Green</label><br/> 
+                    <input id="blue" type="radio" name="color" value="blue">
+                    <label for="blue">Blue</label><br/>
+                </div>
+                <h4>9. Pregunta 9</h4>
+                <div>
+                    <input type="checkbox" id="r" value="red">
+                    <label for="r">Red</label><br/>
+                    <input type="checkbox" id="g" value="green">
+                    <label for="g">Green</label><br/>
+                    <input type="checkbox" id="b" value="blue">
+                    <label for="b">Blue</label><br/>
+                </div>
+                <h4>10. Pregunta 10</h4>
+                <div>
+                    <input type="checkbox" id="r" value="red">
+                    <label for="r">Red</label><br/>
+                    <input type="checkbox" id="g" value="green">
+                    <label for="g">Green</label><br/>
+                    <input type="checkbox" id="b" value="blue">
+                    <label for="b">Blue</label><br/>
+                </div>
+            </form>
+        </div>
     </body>
 </html>
 
