--- a/cuestionario.html
+++ b/cuestionario.html
@@ -16,7 +16,7 @@
             <h1 id="titulo">UNIVERSIDAD<br>NOSTRADAMUS</h1>
         </header>
         <nav id="menu">
-            <a><span id="inicio">INICIO</span></a>
+            <a href="index.html"><span id="inicio">INICIO</span></a>
             <a><span id="info">INFORMACIÓN</span></a>
             <a><span id="ubicacion">UBICACIÓN</span></a>
             <a><span id="about">ABOUT</span></a>
@@ -95,6 +95,11 @@
                     <label for="g">Green</label><br/>
                     <input type="checkbox" id="b" value="blue">
                     <label for="b">Blue</label><br/>
+                </div>
+                <div id="containerBtn">
+                    <a href="cuestionario.html">
+                        <img src="img/boton.png" alt="examen">
+                    </a>
                 </div>
             </form>
         </div>
