--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
         <meta name="description" content="Proyecto: Creación de un examen con autocorrección">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="css/portadaDesktop.css">
-        <!--script src="js/js.js"></script-->
+        <link rel="stylesheet" type="text/css" href="css/Desktop.css">
+        <script src="js/js.js"></script>
     </head>
     <body>
+        <nav class="menu">
+            <a id="menuMovil">&#9776;</a>
+            <a id="inicio">INICIO</a>
+            <a id="info">INFORMACIÓN</a>
+            <a id="ubicacion">UBICACIÓN</a>
+            <a id="about">ABOUT</a>
+        </nav>
         <header id="logo">
             <img src="img/logo.png" alt="logo">
+            <h1 id="titulo">UNIVERSIDAD<br>NOSTRADAMUS</h1>
         </header>
-        <nav id="menu">
-            <a><span id="inicio">INICIO</span></a>
-            <a><span id="info">INFORMACIÓN</span></a>
-            <a><span id="ubicacion">UBICACIÓN</span></a>
-            <a><span id="about">ABOUT</span></a>
-        </nav>
-        <h1 id="titulo">UNIVERSIDAD<br>NOSTRADAMUS</h1>
         <div id="containerBtn">
             <a href="cuestionario.html">
                 <img src="img/boton.png" alt="examen">
