--- a/cuestionario.html
+++ b/cuestionario.html
@@ -15,14 +15,10 @@
             </div>
             <h1 id="titulo">UNIVERSIDAD<br>NOSTRADAMUS</h1>
         </header>
-        <nav id="menu">
-            <a href="index.html"><span id="inicio">INICIO</span></a>
-            <a><span id="info">INFORMACIÓN</span></a>
-            <a><span id="ubicacion">UBICACIÓN</span></a>
-            <a><span id="about">ABOUT</span></a>
-        </nav>
+        
         <div id="containerForm">
             <div id="fondoForm"></div>
+            <h3>Examén</h3>
             <form id="formulario" action="action">
                 <h4>1. Pregunta 1</h4>
                 <select>
