--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
         <meta name="description" content="Proyecto: Creación de un examen con autocorrección">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="css/Desktop.css">
+        <!--link rel="stylesheet" type="text/css" href="css/Desktop.css"-->
+        <link rel='stylesheet' media='screen and (min-width: 961px)' href='css/desktop.css'>
+        <link rel='stylesheet' media='screen and (max-width: 960px)' href='css/movil.css'>
         <script src="js/js.js"></script>
     </head>
     <body>
@@ -24,6 +26,15 @@
             <a href="cuestionario.html">
                 <img src="img/boton.png" alt="examen">
             </a>
+        </div>
+        <div id="containerInfo">
+            <h2>Información</h2>
+        </div>
+        <div id="containerUbicacion">
+            <h2>Ubicación</h2>
+        </div>
+        <div id="containerAbout">
+            <h2>About</h2>
         </div>
     </body>
 </html>
