--- a/cuestionario.html
+++ b/cuestionario.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="css/cuestionarioDesktop.css">
-        <!--script src="js/js.js"></script-->
+        <script src="js/test.js"></script>
     </head>
     <body>
         <header>
@@ -19,11 +19,11 @@
         <div id="containerForm">
             <h3>Examen</h3>
             <form id="formulario" action="action">
-                <h4>1. Pregunta 1</h4>
+                <h4></h4>
                 <input type="text">
-                <h4>2. Pregunta 2</h4>
+                <h4></h4>
                 <input type="text">
-                <h4>3. Pregunta 3</h4>
+                <h4></h4>
                 <select>
                     <option selected value="-1" disabled>Selecciona una...</option>
                     <option value="a">a</option>
@@ -31,7 +31,7 @@
                     <option value="c">c</option>
                     <option value="d">d</option>
                 </select>
-                <h4>4. Pregunta 4</h4>
+                <h4></h4>
                 <select>
                     <option selected value="-1" disabled>Selecciona una...</option>
                     <option value="a">a</option>
@@ -39,7 +39,7 @@
                     <option value="c">c</option>
                     <option value="d">d</option>
                 </select>
-                <h4>5. Pregunta 5</h4>
+                <h4></h4>
                 <select multiple>
                     <option selected value="-1" disabled>Selecciona una o mas...</option>
                     <option value="a">a</option>
@@ -47,7 +47,7 @@
                     <option value="c">c</option>
                     <option value="d">d</option>
                 </select>
-                <h4>6. Pregunta 6</h4>
+                <h4></h4>
                 <select multiple>
                     <option selected value="-1" disabled>Selecciona una o mas...</option>
                     <option value="a">a</option>
@@ -55,7 +55,7 @@
                     <option value="c">c</option>
                     <option value="d">d</option>
                 </select>
-                <h4>7. Pregunta 7</h4>
+                <h4></h4>
                 <div>
                     <input type="checkbox" id="r" value="red">
                     <label for="r">Red</label><br/>
@@ -64,7 +64,7 @@
                     <input type="checkbox" id="b" value="blue">
                     <label for="b">Blue</label><br/>
                 </div>
-                <h4>8. Pregunta 8</h4>
+                <h4></h4>
                 <div>
                     <input type="checkbox" id="r" value="red">
                     <label for="r">Red</label><br/>
@@ -73,7 +73,7 @@
                     <input type="checkbox" id="b" value="blue">
                     <label for="b">Blue</label><br/>
                 </div>
-                <h4>9. Pregunta 9</h4>
+                <h4></h4>
                 <div>
                     <input id="red" type="radio" name="color" value="red">
                     <label for="red">Red</label><br/>
@@ -82,7 +82,7 @@
                     <input id="blue" type="radio" name="color" value="blue">
                     <label for="blue">Blue</label><br/>
                 </div>
-                <h4>10. Pregunta 10</h4>
+                <h4></h4>
                 <div>
                     <input id="red" type="radio" name="color" value="red">
                     <label for="red">Red</label><br/>
@@ -101,5 +101,3 @@
         </div>
     </body>
 </html>
-
-<!--https://www.w3schools.com/w3css/tryw3css_templates_parallax.htm>>
