--- a/cuestionario.html
+++ b/cuestionario.html
@@ -25,7 +25,7 @@
                 <input type="text">
                 <h4></h4>
                 <select>
-                    <option selected value="-1" disabled>Selecciona una...</option>
+                    <option selected value="-1" disabled>Selecciona una...</option-->
                 </select>
                 <h4></h4>
                 <select>
