--- a/cuestionario.html
+++ b/cuestionario.html
@@ -5,7 +5,7 @@
         <meta name="description" content="Proyecto: Creación de un examen con autocorrección">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="css/cuestionarioDesktop.css">
+        <link rel="stylesheet" type="text/css" href="css/cuestionario.css">
         <script src="js/test.js"></script>
     </head>
     <body>
@@ -15,7 +15,6 @@
             </div>
             <h1 id="titulo">UNIVERSIDAD<br>NOSTRADAMUS</h1>
         </header>
-
         <div id="containerForm">
             <h3>Examen</h3>
             <form id="formulario" action="action">
@@ -75,7 +74,6 @@
                     <input id="blue" type="radio" name="color" value="blue">
                     <label for="blue">Blue</label><br/>
                 </div>
-
                 <div id="containerBtn">
                     <a href="cuestionario.html">
                         <img src="img/boton.png" alt="examen">
