--- a/cuestionario.html
+++ b/cuestionario.html
@@ -40,43 +40,19 @@
                 </select>
                 <h4></h4>
                 <div>
-                    <input type="checkbox" id="r" value="red">
-                    <label for="r">Red</label><br/>
-                    <input type="checkbox" id="g" value="green">
-                    <label for="g">Green</label><br/>
-                    <input type="checkbox" id="b" value="blue">
-                    <label for="b">Blue</label><br/>
                 </div>
                 <h4></h4>
                 <div>
-                    <input type="checkbox" id="r" value="red">
-                    <label for="r">Red</label><br/>
-                    <input type="checkbox" id="g" value="green">
-                    <label for="g">Green</label><br/>
-                    <input type="checkbox" id="b" value="blue">
-                    <label for="b">Blue</label><br/>
                 </div>
                 <h4></h4>
                 <div>
-                    <input id="red" type="radio" name="color" value="red">
-                    <label for="red">Red</label><br/>
-                    <input id="green" type="radio" name="color" value="green">
-                    <label for="green">Green</label><br/> 
-                    <input id="blue" type="radio" name="color" value="blue">
-                    <label for="blue">Blue</label><br/>
                 </div>
                 <h4></h4>
                 <div>
-                    <input id="red" type="radio" name="color" value="red">
-                    <label for="red">Red</label><br/>
-                    <input id="green" type="radio" name="color" value="green">
-                    <label for="green">Green</label><br/> 
-                    <input id="blue" type="radio" name="color" value="blue">
-                    <label for="blue">Blue</label><br/>
                 </div>
                 <div id="containerBtn">
                     <a href="cuestionario.html">
-                        <img src="img/boton.png" alt="examen">
+                        <img src="img/boton2.png" alt="examen">
                     </a>
                 </div>
             </form>
