--- a/cuestionario.html
+++ b/cuestionario.html
@@ -15,21 +15,18 @@
         <div id="logo">
             <img src="img/logo.png" alt="logo">
         </div>
-        <h1 id="titulo">UNIVERSIDAD
-            <br>NOSTRADAMUS</h1>
+        <h1 id="titulo">UNIVERSIDAD<br>NOSTRADAMUS</h1>
     </header>
     <div id="containerForm">
         <h3>Examen</h3>
         <form id="formulario" action="action">
             <h4></h4>
-            <input type="text">
+            <div class="styled-text">
+            <input type="text" placeholder="Escribe aquí...">
+            </div>
             <h4></h4>
-            <input type="text">
-            <h4></h4>
-            <div class="styled-select">
-                <select>
-                    <option selected value="-1" disabled>Selecciona una...</option>
-                </select>
+            <div class="styled-text">
+            <input type="text" placeholder="Escribe aquí...">
             </div>
             <h4></h4>
             <div class="styled-select">
@@ -38,13 +35,23 @@
                 </select>
             </div>
             <h4></h4>
-            <select multiple>
-                <option selected value="-1" disabled>Selecciona una o mas...</option>
-            </select>
+            <div class="styled-select">
+                <select>
+                    <option selected value="-1" disabled>Selecciona una...</option>
+                </select>
+            </div>
             <h4></h4>
+            <div class="styled-selectMult">
             <select multiple>
                 <option selected value="-1" disabled>Selecciona una o mas...</option>
             </select>
+            </div>
+            <h4></h4>
+            <div class="styled-selectMult">
+            <select multiple>
+                <option selected value="-1" disabled>Selecciona una o mas...</option>
+            </select>
+            </div>
             <h4></h4>
             <div>
             </div>
