--- a/index.html
+++ b/index.html
@@ -1,39 +1,48 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Universidad Nostradamus</title>
-        <meta name="description" content="Proyecto: Creación de un examen con autocorrección">
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel='stylesheet' media='screen and (min-width: 961px)' href='css/desktop.css'>
-        <link rel='stylesheet' media='screen and (max-width: 960px)' href='css/movil.css'>
-        <script src="js/js.js"></script>
-    </head>
-    <body>
-        <nav class="menu">
-            <a id="menuMovil">&#9776;</a>
-            <a id="inicio">INICIO</a>
-            <a id="info">INFORMACIÓN</a>
-            <a id="ubicacion">UBICACIÓN</a>
-            <a id="about">ABOUT</a>
-        </nav>
-        <header id="logo">
-            <img src="img/logo.png" alt="logo">
-            <h1 id="titulo">UNIVERSIDAD<br>NOSTRADAMUS</h1>
-        </header>
-        <div id="containerBtn">
-            <a href="cuestionario.html">
-                <img src="img/boton.png" alt="examen">
-            </a>
-        </div>
-        <div id="containerInfo">
-            <h2>Información</h2>
-        </div>
-        <div id="containerUbicacion">
-            <h2>Ubicación</h2>
-        </div>
-        <div id="containerAbout">
-            <h2>About</h2>
-        </div>
-    </body>
+
+<head>
+    <title>Universidad Nostradamus</title>
+    <meta name="description" content="Proyecto: Creación de un examen con autocorrección">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel='stylesheet' media='screen and (min-width: 961px)' href='css/desktop.css'>
+    <link rel='stylesheet' media='screen and (max-width: 960px)' href='css/movil.css'>
+    <script src="js/js.js"></script>
+    <meta property="og:site_name" content="Universidad Nostradamus">
+    <meta property="og:url" content="https://rawgit.com/DavidVillalba/Examen-Autocorreccion/master/index.html">
+    <meta property="og:title" content="Universidad Nostradamus">
+    <meta property="og:image" content="Url de la imatge que es presentarà quan comparteixes">
+    <meta property="og:description" content="Proyecto: Creación de un examen con autocorrección">
+</head>
+
+<body>
+    <nav class="menu">
+        <a id="menuMovil">&#9776;</a>
+        <a id="inicio">INICIO</a>
+        <a id="info">INFORMACIÓN</a>
+        <a id="ubicacion">UBICACIÓN</a>
+        <a id="about">ABOUT</a>
+    </nav>
+    <header id="logo">
+        <img src="img/logo.png" alt="logo">
+        <h1 id="titulo">UNIVERSIDAD
+            <br>NOSTRADAMUS</h1>
+    </header>
+    <div id="containerBtn">
+        <a href="cuestionario.html">
+            <img src="img/boton.png" alt="examen">
+        </a>
+    </div>
+    <div id="containerInfo">
+        <h2>Información</h2>
+    </div>
+    <div id="containerUbicacion">
+        <h2>Ubicación</h2>
+    </div>
+    <div id="containerAbout">
+        <h2>About</h2>
+    </div>
+</body>
+
 </html>
