--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <link rel='stylesheet' media='screen and (max-width: 960px)' href='css/movil.css'>
     <script src="js/js.js"></script>
     <meta property="og:site_name" content="Universidad Nostradamus">
-    <meta property="og:url" content="https://rawgit.com/DavidVillalba/Examen-Autocorreccion/master/index.html">
+    <meta property="og:url" content="https://rawgit.com/DavidVillalba/Examen/master/index.html">
     <meta property="og:title" content="Universidad Nostradamus">
-    <meta property="og:image" content="Url de la imatge que es presentarà quan comparteixes">
+    <meta property="og:image" content="https://rawgit.com/DavidVillalba/Examen/master/img/portada.PNG">
     <meta property="og:description" content="Proyecto: Creación de un examen con autocorrección">
 </head>
 
