--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
     </div>
     <div id="containerInfo">
         <h2>Información</h2>
+        <p>La prestigiosa Universidad de Jar-Bar abre sus puertas para el próximo curso 2017-2018. Por ese motivo, abrimos nuestra página web para poder entrar en contacto con aquellos interesados.
+            Si navegáis por el menú superior podéis acceder a información relevante de nuestra universidad, como su ubicación o un modelo de examen para que conozcas el alto nivel que se imparte en esta universidad.
+            Atte. La Directiva de la Universidad de Jar-Bar.</p>
     </div>
     <div id="containerUbicacion">
         <h2>Ubicación</h2>
