--- a/cuestionario.html
+++ b/cuestionario.html
@@ -64,11 +64,9 @@
             <h4></h4>
             <div>
             </div>
-            <div id="containerBtn">
-                <a href="cuestionario.html">
+            <button id="containerBtn">
                     <img src="img/boton2.png" alt="examen">
-                </a>
-            </div>
+            </button>
         </form>
     </div>
 </body>
