--- a/cuestionario.html
+++ b/cuestionario.html
@@ -64,9 +64,9 @@
             <h4></h4>
             <div>
             </div>
-            <button id="containerBtn">
+            <div id="containerBtn">
                     <img src="img/boton2.png" alt="examen">
-            </button>
+            </div>
         </form>
     </div>
 </body>
