--- a/cuestionario.html
+++ b/cuestionario.html
@@ -1,75 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <title>Universidad Nostradamus</title>
-    <meta name="description" content="Proyecto: Creación de un examen con autocorrección">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' media='screen and (min-width: 961px)' href='css/cuestionario.css'>
-    <link rel='stylesheet' media='screen and (max-width: 960px)' href='css/cuestionarioM.css'>
-    <script src="js/test.js"></script>
-</head>
-
-<body>
-    <header>
-        <div id="logo">
-            <img src="img/logo.png" alt="logo">
-        </div>
-        <h1 id="titulo">UNIVERSIDAD<br>NOSTRADAMUS</h1>
-    </header>
-    <div id="containerForm">
-        <h3>Examen</h3>
-        <form id="formulario" action="action">
-            <h4>·</h4>
-            <div class="styled-text">
-            <input type="text" placeholder="Escribe aquí...">
-            </div>
-            <h4>·</h4>
-            <div class="styled-text">
-            <input type="text" placeholder="Escribe aquí...">
-            </div>
-            <h4>·</h4>
-            <div class="styled-select">
-                <select>
-                    <option selected value="-1" disabled>Selecciona una...</option>
-                </select>
-            </div>
-            <h4>·</h4>
-            <div class="styled-select">
-                <select>
-                    <option selected value="-1" disabled>Selecciona una...</option>
-                </select>
-            </div>
-            <h4>·</h4>
-            <div class="styled-selectMult">
-            <select multiple>
-                <option selected value="-1" disabled>Selecciona una o mas...</option>
-            </select>
-            </div>
-            <h4>·</h4>
-            <div class="styled-selectMult">
-            <select multiple>
-                <option selected value="-1" disabled>Selecciona una o mas...</option>
-            </select>
-            </div>
-            <h4>·</h4>
-            <div>
-            </div>
-            <h4>·</h4>
-            <div>
-            </div>
-            <h4>·</h4>
-            <div>
-            </div>
-            <h4>·</h4>
-            <div>
-            </div>
-            <div id="containerBtn">
-                    <img src="img/boton2.png" alt="examen">
-            </div>
-        </form>
-    </div>
-</body>
-
-</html>
+<!DOCTYPE html><html><head><title>Universidad Nostradamus</title><meta name="description" content="Proyecto: Creación de un examen con autocorrección"><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel='stylesheet' media='screen and (min-width: 961px)' href='css/cuestionario.css'><link rel='stylesheet' media='screen and (max-width: 960px)' href='css/cuestionarioM.css'> <script src="js/test.js"></script> </head><body> <header><div id="logo"> <img src="img/logo.png" alt="logo"></div><h1 id="titulo">UNIVERSIDAD<br>NOSTRADAMUS</h1> </header><div id="containerForm"><h3>Examen</h3><form id="formulario" action="action"><h4>·</h4><div class="styled-text"> <input type="text" placeholder="Escribe aquí..."></div><h4>·</h4><div class="styled-text"> <input type="text" placeholder="Escribe aquí..."></div><h4>·</h4><div class="styled-select"> <select><option selected value="-1" disabled>Selecciona una...</option> </select></div><h4>·</h4><div class="styled-select"> <select><option selected value="-1" disabled>Selecciona una...</option> </select></div><h4>·</h4><div class="styled-selectMult"> <select multiple><option selected value="-1" disabled>Selecciona una o mas...</option> </select></div><h4>·</h4><div class="styled-selectMult"> <select multiple><option selected value="-1" disabled>Selecciona una o mas...</option> </select></div><h4>·</h4><div></div><h4>·</h4><div></div><h4>·</h4><div></div><h4>·</h4><div></div><div id="containerBtn"> <img src="img/boton2.png" alt="examen"></div></form></div></body></html>
